# iot-honeypot-esp32

./: README.md
iot-honeypot-esp32/: README.md
iot-honeypot-esp32/main/: CMakeLists.txt  honeypot.c
iot-honeypot-esp32/main/logging/: attack_logger.c
iot-honeypot-esp32/main/services/: http_service.c
main/: honeypot.h  main.c
main/utils/: config.h
