idf_component_register(SRCS "main.c"
                               "honeypot.c"
                               "networking/wifi_manager.c"
                               "networking/socket_manager.c"
                               "services/http_service.c"
                               "services/telnet_service.c"
                               "services/ftp_service.c"
                               "services/mqtt_service.c"
                               "logging/attack_logger.c"
                               "logging/flash_storage.c"
                               "security/rate_limiter.c"
                               "security/watchdog.c"
                               "utils/helpers.c"
                               "utils/md5_hash.c"
                    INCLUDE_DIRS "."
                                 "networking"
                                 "services"
                                 "logging"
                                 "security"
                                 "utils"
                    REQUIRES nvs_flash esp_http_client mbedtls)